--- a/Sample/src/main/res/values/strings.xml
+++ b/Sample/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
+
     <string name="app_name">FirUpdater</string>
+
+    <string name="grva_title">GroupRecyclerViewAdapter</string>
+    <string name="grva_subtitle">分组列表</string>
+
 </resources>
